K8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontendservice
  template:
    metadata:
      labels:
        app: frontendservice
    spec:
      containers:
        - name: frontendservice
          image: tridocker3108/frontendservices:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-services-clusterip
spec:
  type: ClusterIP
  selector:
    app: frontendservice
  ports:
  - name: frontendservice
    protocol: TCP
    port: 80
    targetPort: 80  

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: frontendservice
  ports:
  - protocol: TCP
    port: 8085
    targetPort: 80
