K8s/frontend-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendservice-srv
spec:
  type: NodePort
  selector:
    app: frontendservice
  ports:
    - name: frontendservice
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31000
