K8s/identity-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identityservice
  template:
    metadata:
      labels:
        app: identityservice
    spec:
      containers:
        - name: identityservice
          image: tridocker3108/identityservices:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: identity-services-clusterip
spec:
  type: ClusterIP
  selector:
    app: identityservice
  ports:
  - name: identityservice
    protocol: TCP
    port: 80
    targetPort: 80  

---
apiVersion: v1
kind: Service
metadata:
  name: identityservice-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: identityservice
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
